Edited the datePicker style

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,17 @@
 /* App.css */
-html, body, #root {
+html,
+body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  overflow-y: hidden; /* Prevent vertical scrolling */
 }
 
-
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
